# token-vs-context-llms

./: .gitignore  Makefile  README.md  proposal.tex  pyproject.toml
artifacts/: README.md
configs/: experiment_template.yaml  pythia160m.yaml  pythia70m.yaml  pythia_debug.yaml  pythia_pile10k.yaml  pythia_pile10k_160m.yaml  pythia_pile10k_70m_100k.yaml  small_debug.yaml
data/: README.md
docs/: progress_report.md
docs/final_report/: final_report.md  final_report.tex  sources.bib
docs/final_report/figures/pythia_160m_pile10k_50k_diagnostics/: diagnostic_summary.md  heatmap_tokens.md  worst_tokens.md
docs/final_report/figures/pythia_debug_diagnostics/: diagnostic_summary.md  diagnostics.npz  worst_tokens.md
docs/final_report/figures/pythia_pile10k_diagnostics/: diagnostic_summary.md  worst_tokens.md
results/: README.md
src/token_vs_context_llms/: __init__.py  __main__.py  cli.py  config.py  diagnostics.py  extract.py  io.py  metrics.py  plotting.py  probe.py  summary.py
tests/: test_metrics.py  test_probe.py  test_summary.py
writeup/: final_report.md  progress_report.md  proposal.tex  references.bib  sources.bib
